[package]
name = "nuc_lights"
version = "0.1.0"
authors = ["thinkier <26728734+thinkier@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
linux-kernel-module = { git = "https://github.com/thinkier/linux-kernel-module-rust" }
